@@ -1,51 +1,23 @@
 /*
- * Copyright © 2017-2021 CESSDA ERIC (support@cessda.eu)
+ * Copyright © 2017-2023 CESSDA ERIC (support@cessda.eu)
  *
- * Licensed under the Apache License, Version 2.0 (the "License").
- * You may not use this file except in compliance with the License.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *  http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
-
 package eu.cessda.cvs.utils;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 import eu.cessda.cvs.domain.Concept;
 import eu.cessda.cvs.domain.Version;
 import eu.cessda.cvs.domain.Vocabulary;
-import eu.cessda.cvs.service.VocabularyNotFoundException;
 import eu.cessda.cvs.service.dto.ConceptDTO;
 import eu.cessda.cvs.service.dto.VersionDTO;
 import eu.cessda.cvs.service.dto.VocabularyDTO;
@@ -53,66 +25,40 @@ import eu.cessda.cvs.service.search.EsFilter;
 import eu.cessda.cvs.service.search.EsQueryResultDetail;
 import eu.cessda.cvs.service.search.SearchScope;
 import eu.cessda.cvs.web.rest.domain.Aggr;
+import eu.cessda.cvs.web.rest.domain.Bucket;
 import eu.cessda.cvs.web.rest.domain.CvResult;
+import org.apache.commons.lang3.StringUtils;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 public final class VocabularyUtils
 {
-	private static final Logger log = LoggerFactory.getLogger( VocabularyUtils.class );
-
-	private VocabularyUtils()
+    private VocabularyUtils()
 	{
 	}
 
-	public static Comparator<VersionDTO> versionDtoComparator()
-	{
-		return Comparator.comparing( VersionDTO::getItemType )
-				.thenComparing( VersionDTO::getLanguage )
-				.thenComparing( VersionDTO::getNumber, Comparator.reverseOrder() );
-	}
+    public static final Comparator<VersionDTO> VERSION_DTO_COMPARATOR =
+        Comparator.comparing( VersionDTO::getItemType )
+            .thenComparing( VersionDTO::getLanguage )
+            .thenComparing( VersionDTO::getNumber, Comparator.reverseOrder() );
 
-	public static Comparator<Version> versionComparator()
-	{
-		return Comparator.comparing( Version::getItemType )
-				.thenComparing( Version::getLanguage )
-				.thenComparing( Version::getNumber, Comparator.reverseOrder() );
-	}
-
-	public static VocabularyDTO generateVocabularyByPath( Path jsonPath )
-	{
-		ObjectMapper mapper = new ObjectMapper();
-		mapper.registerModule( new JavaTimeModule() );
-		mapper.disable( SerializationFeature.WRITE_DATES_AS_TIMESTAMPS );
-
-		VocabularyDTO vocabularyDTO;
-		try ( InputStream jsonStream = Files.newInputStream( jsonPath ) )
-		{
-			vocabularyDTO = mapper.readValue( jsonStream, VocabularyDTO.class );
-			// reorder concepts
-			for ( VersionDTO version : vocabularyDTO.getVersions() )
-			{
-				version.setConcepts(
-						version.getConcepts().stream().sorted( Comparator.comparing( ConceptDTO::getPosition ) )
-								.collect( Collectors.toCollection( LinkedHashSet::new ) ) );
-			}
-
-		}
-		catch (IOException e)
-		{
-			log.error( "Couldn't generate vocabulary from JSON: {}", e.toString() );
-			throw new VocabularyNotFoundException(
-					"Published vocabulary not found, please check Vocabulary notation and SL version number!" );
-		}
-		// reorder version
-		vocabularyDTO.setVersions( vocabularyDTO.getVersions().stream().sorted( versionDtoComparator() )
-				.collect( Collectors.toCollection( LinkedHashSet::new ) ) );
-
-		return vocabularyDTO;
-	}
+    public static final Comparator<Version> VERSION_COMPARATOR =
+        Comparator.comparing( Version::getItemType )
+            .thenComparing( Version::getLanguage )
+            .thenComparing( Version::getNumber, Comparator.reverseOrder() );
 
 	public static VersionDTO getVersionByLangVersion( VocabularyDTO vocabularyDTO, String language, String versionNumber )
 	{
 		return vocabularyDTO.getVersions().stream()
-				.filter( v -> v.getLanguage().equals( language ) && v.getNumber().equals( versionNumber ) )
+				.filter( v -> v.getLanguage().equals( language ) && v.getNumber().equals( VersionNumber.fromString( versionNumber ) ) )
 				.findFirst().orElse( null );
 	}
 
@@ -145,8 +91,10 @@ public final class VocabularyUtils
 		esq.setSearchTerm( q );
 
 		// prepare filter
-		if ( f != null && !f.isEmpty() )
-			VocabularyUtils.prepareActiveFilters( f, esq, searchScope );
+		if ( f == null || f.isEmpty() ) {
+			f = "language:en";
+		}
+		VocabularyUtils.prepareActiveFilters( f, esq, searchScope );
 
 		if ( pageable != null )
 		{
@@ -159,15 +107,8 @@ public final class VocabularyUtils
 
 	public static void prepareActiveFilters( String f, EsQueryResultDetail esq, SearchScope searchScope )
 	{
-		try
-		{
-			f = URLDecoder.decode( f, "UTF-8" );
-		}
-		catch (UnsupportedEncodingException e)
-		{
-			log.error( e.getMessage() );
-		}
-		if ( f != null && !f.isEmpty() )
+        f = URLDecoder.decode( f, StandardCharsets.UTF_8);
+        if ( f != null && !f.isEmpty() )
 		{
 			for ( String filterChunk : f.split( ";" ) )
 			{
@@ -192,6 +133,7 @@ public final class VocabularyUtils
 			if ( filterSplit[1].contains( "_all" ) )
 			{
 				esq.setSearchAllLanguages( true );
+				esq.setSortLanguage("All");
 				return;
 			}
 			else if ( filterSplit[1].contains( "," ) )
@@ -263,16 +205,6 @@ public final class VocabularyUtils
 
 	public static CvResult mapResultToCvResult( EsQueryResultDetail esq, Page<VocabularyDTO> vocabulariesPage )
 	{
-		CvResult cvResult = new CvResult();
-		cvResult.setVocabularies( vocabulariesPage.getContent() );
-		cvResult.setFirst( vocabulariesPage.isFirst() );
-		cvResult.setLast( vocabulariesPage.isLast() );
-		cvResult.setNumber( vocabulariesPage.getNumber() );
-		cvResult.setNumberOfElements( vocabulariesPage.getNumberOfElements() );
-		cvResult.setSize( vocabulariesPage.getSize() );
-		cvResult.setTotalElements( vocabulariesPage.getTotalElements() );
-		cvResult.setTotalPage( vocabulariesPage.getTotalPages() );
-
 		// bucketFilter
 		Map<String, List<EsFilter>> filterMap = new LinkedHashMap<>();
 		for ( EsFilter esFilter : esq.getEsFilters() )
@@ -280,36 +212,61 @@ public final class VocabularyUtils
 			List<EsFilter> esFilters = filterMap.computeIfAbsent( esFilter.getField(), k -> new ArrayList<>() );
 			esFilters.add( esFilter );
 		}
+
+        var aggrs = new ArrayList<Aggr>();
+
 		// map contains either 1 or 2
 		filterMap.forEach( ( k, v ) ->
 		{
-			Aggr agg = new Aggr();
-			agg.setType( v.get( 0 ).getFilterType().toString().toLowerCase() );
-			agg.setField( v.get( 0 ).getField() );
-			agg.setValues( v.get( 0 ).getValues() );
-			agg.setBucketFromMap( v.get( 0 ).getBucket() );
-			agg.setFilteredBucketFromMap( v.get( 0 ).getFilteredBucket() );
-			cvResult.addAggr( agg );
+            var buckets = transformToBuckets( v.get( 0 ).getBucket() );
+            var filteredBuckets = transformToBuckets( v.get( 0 ).getFilteredBucket() );
+
+            Aggr agg = new Aggr(
+                v.get( 0 ).getFilterType().toString().toLowerCase(),
+                v.get( 0 ).getField(),
+                v.get( 0 ).getValues(),
+                buckets,
+                filteredBuckets
+            );
+			aggrs.add( agg );
 		} );
-		return cvResult;
+
+        return new CvResult(
+            vocabulariesPage.getContent(),
+            vocabulariesPage.getTotalElements(),
+            vocabulariesPage.getTotalPages(),
+            vocabulariesPage.getNumberOfElements(),
+            vocabulariesPage.getNumber(),
+            vocabulariesPage.getSize(),
+            vocabulariesPage.isFirst(),
+            vocabulariesPage.isLast(),
+            aggrs
+        );
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, Vocabulary vocabulary )
+    private static List<Bucket> transformToBuckets( Map<String, Long> bucket )
+    {
+        List<Bucket> buckets = new ArrayList<>( bucket.size() );
+        bucket.forEach( ( k, v ) -> buckets.add( new Bucket( k, v ) ) );
+        return buckets;
+    }
+
+    public static String generateUri(String uri, Vocabulary vocabulary )
 	{
 		return generateUri( uri, null, vocabulary.getNotation(), null, vocabulary.getSourceLanguage(), null, null );
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, Vocabulary vocabulary, Version version, Concept concept )
+	public static String generateUri(String uri, Vocabulary vocabulary, Version version, Concept concept )
 	{
 		if ( concept == null )
-			return generateUri( uri, true, vocabulary.getNotation(), VersionUtils.getSlNumberFromTl( version.getNumber() ),
+			return generateUri( uri, true, vocabulary.getNotation(), version.getNumber(),
 					vocabulary.getSourceLanguage(), null, null );
 		else
-			return generateUri( uri, true, vocabulary.getNotation(), VersionUtils.getSlNumberFromTl( version.getNumber() ),
+			return generateUri( uri, true, vocabulary.getNotation(), version.getNumber(),
 					vocabulary.getSourceLanguage(), concept.getNotation(), concept.getId() );
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, VersionDTO version, ConceptDTO concept )
+	public static String generateUri(String uri, VersionDTO version, ConceptDTO concept )
 	{
 		if ( concept == null )
 			return generateUri( uri, true, version.getNotation(), version.getNumber(), version.getLanguage(), null, null );
@@ -320,7 +277,7 @@ public final class VocabularyUtils
 
 	/**
 	 * Generated
-	 * 
+	 *
 	 * @param uri
 	 * @param notation
 	 * @return
@@ -329,7 +286,7 @@ public final class VocabularyUtils
 			String uri,
 			Boolean isVersionUri,
 			String notation,
-			String version,
+			VersionNumber version,
 			String language,
 			String code,
 			Long conceptID )
@@ -344,7 +301,7 @@ public final class VocabularyUtils
 		if ( isVersionUri != null )
 		{
 			// generate version or code URI
-			generatedUri = generatedUri.replace( "[VERSION]", version );
+			generatedUri = generatedUri.replace( "[VERSION]", version.toString() );
 			if ( !Boolean.TRUE.equals( isVersionUri ) )
 			{
 				// generate code uri
